--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: cdis.cache.example.com
+  name: cdis.cdi.kubevirt.io
 spec:
-  group: cache.example.com
+  group: cdi.kubevirt.io
   names:
     kind: CDI
     listKind: CDIList
