--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -1,4 +1,4 @@
-kind: ClusterRole
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: cdi-operator
@@ -33,15 +33,28 @@ rules:
 
 ---
 
-kind: ClusterRoleBinding
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: cdi-operator
+  name: default-account-kubevirt-operator
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: default
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: cdi-operator
   apiGroup: rbac.authorization.k8s.io
+
+---
+
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1beta1
+metadata:
+  name: cdi-operator
+rules:
+  - apiGroups:
+    - cdi.kubevirt.io
+    resources:
+    - "*"
+    verbs:
+    - "*"
