--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,2 @@
-# remnove once https://github.com/fabiand/traviskube/pull/26 got merged/fixed
+# remove once https://github.com/fabiand/traviskube/pull/26 got merged/fixed
 openshift.local.clusterup
